ECMS-4195 fix problem with ctrl-click on firefox for MAC

--- a/apps/portlet-explorer/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/DefaultStylesheet.css
+++ b/apps/portlet-explorer/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/DefaultStylesheet.css
@@ -558,6 +558,10 @@
 	overflow: hidden;
 }
 
+.UIJCRExplorerPortlet .UIFileView .UIListGrid .RowView {
+	margin-top: 0px;
+}
+
 .UIJCRExplorerPortlet .UIListGrid .FileDrag {
 	background: grey;
 }
